/**
 *
 * Wechaty Puppet gRPC Protocol Buffers
 *  https://github.com/chatie/grpc/
 *  Huan LI <zixia@zixia.net>
 *  Apr 2018
 *  License: Apache-2.0
 *
 */
syntax = "proto3";

package wechaty.puppet;

import public "wechaty-puppet/base.proto";
import public "wechaty-puppet/contact.proto";
import public "wechaty-puppet/friendship.proto";
import public "wechaty-puppet/message.proto";
import public "wechaty-puppet/room.proto";
import public "wechaty-puppet/room-invitation.proto";

service Puppet {
  /**
   *
   * Base
   *
   */
  rpc Start (StartRequest)  returns (StartResponse) {}
  rpc Stop (StopRequest)    returns (StopResponse) {}

  rpc SelfId (SelfIdRequest)      returns (SelfIdResponse) {}
  rpc Logout (LogoutRequest)      returns (LogoutResponse) {}
  rpc Logonoff (LogonoffRequest)  returns (LogonoffResponse) {}
  rpc Ding (DingRequest)          returns (DingResponse) {}
  rpc Version (VersionRequest)    returns (VersionResponse) {}

  /**
   *
   * Contact
   *
   */
  rpc ContactPayload (ContactPayloadRequest)  returns (ContactPayloadResponse) {}
  rpc ContactList (ContactListRequest)        returns (ContactListResponse) {}

  /**
   *
   * Room
   *
   */
  rpc RoomPayload (RoomPayloadRequest)  returns (RoomPayloadResponse) {}
  rpc RoomList (RoomListRequest)        returns (RoomListResponse) {}

  /**
   *
   * Room Invitation
   *
   */
  rpc RoomInvitationPayload (RoomInvitationPayloadRequest)  returns (RoomInvitationPayloadResponse) {}

  /**
   *
   * Message
   *
   */
   rpc MessagePayload (MessagePayloadRequest)  returns (MessagePayloadResponse) {}

  /**
   *
   * Friendship
   *
   */
   rpc FriendshipPayload (FriendshipPayloadRequest)  returns (FriendshipPayloadResponse) {}

}
