syntax = "proto3";
package wechaty.puppet;

enum ContactGender {
  ContactGenderUnknown = 0;
  Male                 = 1;
  Female               = 2;
}

enum ContactType {
  ContactTypeUnknown = 0;
  Personal           = 1;
  Official           = 2;
}

message ContactListRequest {
}
message ContactListResponse {
  repeated string id = 1;
}


message ContactPayloadRequest {
  string id = 1;
}
message ContactPayloadResponse {
  string        id        = 1;
  ContactGender gender    = 2;
  ContactType   type      = 3;
  string        name      = 4;
  string        avatar    = 5;
  string        address   = 6;
  string        alias     = 7;
  string        city      = 8;
  bool          friend    = 9;
  string        province  = 10;
  string        signature = 11;
  bool          star      = 12;
  string        weixin    = 13;
}
